properly used ngrok to see on my phone and fixed spacing, messy css tho need to clean up

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ main {
 }
 @media (max-width: 576px) {
   main {
+    height: 69vh;
     width: 100%;
   }
 }
@@ -901,11 +902,16 @@ section#ratings subsection .item.rating .date {
 }
 @media (max-width: 576px) {
   #contact-container {
+    overflow: scroll;
+    scroll-behavior: smooth;
+    scrollbar-color: #EB5E28 #1D1E1F;
+    scrollbar-width: thin;
     width: 100%;
     gap: 0;
   }
   #contact-container button {
     width: 100%;
+    height: 40px;
   }
 }
 #contact-container .headings, #contact-container form {
@@ -922,6 +928,9 @@ section#ratings subsection .item.rating .date {
   #contact-container .headings, #contact-container form {
     padding: 0;
     gap: 8px;
+  }
+  #contact-container .headings button, #contact-container form button {
+    margin-bottom: 24px;
   }
 }
 #contact-container .headings {
@@ -953,11 +962,6 @@ section#ratings subsection .item.rating .date {
   flex-direction: row;
   gap: 24px;
   width: 100%;
-}
-@media (max-width: 576px) {
-  #contact-container form .row-group {
-    flex-direction: column;
-  }
 }
 @media (max-width: 768px) {
   #contact-container form .row-group {
@@ -1003,6 +1007,11 @@ section#ratings subsection .item.rating .date {
 }
 #contact-container form .form-group textarea {
   height: 180px;
+}
+@media (max-width: 576px) {
+  #contact-container form .form-group textarea {
+    height: 100px;
+  }
 }
 #contact-container form p {
   font-size: 3rem;
@@ -1206,8 +1215,8 @@ section#ratings subsection .item.rating .date {
   #content-container {
     padding: 0px;
     max-height: 87vh;
-    margin-top: 80px;
-    margin-bottom: 32px;
+    box-sizing: border-box;
+    padding-top: 80px;
   }
 }
 
