--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -4,11 +4,13 @@
   align-self: center;
 
   @include respond-to(sm) {
+    @include scrollable;
     width: 100%;
     gap: 0;
 
     button {
       width: 100%;
+      height: 40px;
     }
   }
 
@@ -22,6 +24,9 @@
     @include respond-to(sm) {
       padding: 0;
       gap: $spacing-xs;
+      button {
+        margin-bottom: $spacing-md;
+      }
     }
   }
 
@@ -49,10 +54,6 @@
       gap: $spacing-md;
       width: 100%;
 
-      @include respond-to(sm) {
-        flex-direction: column;
-      }
-
       @include respond-to(md) {
         flex-direction: column;
       }
@@ -76,7 +77,7 @@
         background-color: $color-medium-grey;
         transition: $transition;
         border: none;
-
+        
         &:focus {
           outline: none;
           background-color: $color-dark-grey;
@@ -95,6 +96,10 @@
 
       textarea {
         height: 180px;
+
+        @include respond-to(sm) {
+          height: 100px;
+        }
       }
     }
 
